--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "main": "database.js",
   "scripts": {
     "start": "node app.js",
-    "dev": "start npx nodemon app.js && start npx nodemon auth.js"
+    "dev": "npx nodemon app.js && npx nodemon auth.js"
   },
   "keywords": [],
   "author": "",
@@ -18,6 +18,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.6.0",
     "nodemailer": "^6.9.7",
     "nodemon": "^3.0.1"
